# newportfolio

./: .replit  README.md  pyproject.toml
backend/: db.sqlite3  requirements.txt
backend/backend/: settings.py  urls.py
backend/core/: admin.py  forms.py  models.py  urls.py  views.py
backend/core/migrations/: 0001_initial.py  0002_alter_project_featurecrud_and_more.py  0003_project_slug_alter_project_title.py  0004_alter_project_thumbnail.py  0005_alter_project_thumbnail.py  0006_contact.py  0007_project_upvotes_project_url_comment.py  0008_gallery.py  0009_gallery_video.py
backend/core/static/: style.css
backend/core/templates/: base.html  dashboard.html  frontpage.html  gallery.html  login.html  project.html  signup.html
backend/static/: style.css
backend/staticfiles/: staticfiles.json  style.689f2d39ec34.css
