[tool.poetry]
name = "newportfolio"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
tzdata = "^2022.7"
cloudinary = "^1.30.0"
django-cloudinary-storage = "^0.3.0"
whitenoise = "^6.3.0"
Django = "^4.1.5"
Pillow = "^9.4.0"
django-cors-headers = "^3.13.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
